Maybe fixed scrolling on mobile? (again)

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,6 @@ body {
   padding: 0;
   height: 100vh;
   padding: 1rem;
-  overflow: hidden;
 }
 
 a {
